# lecture-classical-raytracer-2021

./: CMakeLists.txt  README.md  a.out  keisyou.cpp
ref/: CMakeLists.txt  Gumowski.cpp  image.h  imagetest.cpp  pinhole.h  plot.h  ray.h  raytest.cpp  test.cpp  vec3.h
src/: classical_raytracer.h  image.h  intersectinfo.h  main.cpp  pathtracer.h  pinhole.h  ray.h  rng.h  scene.h  shape.h  sphere.h  triangle.h  vec3.h
